<resources>
    <string name="app_name">Gra miejska</string>

    <string name="action_settings">Settings</string>
    <string name="list_game">List game</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>

    <string name="about1">create by</string>
    <string name="about2">men</string>
    <string name="about3">Gra miejska</string>
    <string name="about4">Version: 1.0</string>

    <string name="start">Start Game</string>
    <string name="check">Check</string>
    <string name="next">Next</string>
    <string name="time_game">Time Game</string>
    <string name="level_game">Level Game</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
