<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginTop="25dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/title"
        android:text="name" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginTop="75dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/description"
        android:text="opis" />






    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/author"
        android:text="@string/level_game"
        android:layout_marginBottom="50dp"
        android:layout_above="@+id/time_game_text"
        android:layout_alignStart="@+id/time_game_text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/time_game"
        android:id="@+id/time_game_text"
        android:layout_marginBottom="20dp"
        android:layout_above="@+id/buttonstart"
        android:layout_alignStart="@+id/buttonstart" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="time"
        android:id="@+id/time_game"
        android:layout_alignTop="@+id/time_game_text"
        android:layout_toEndOf="@+id/title"
        android:layout_marginStart="18dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:id="@+id/buttonstart"
        android:layout_gravity="right"
        android:minWidth="250dp"
        android:layout_marginTop="36dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/level"
        android:src="@drawable/level1_76"
        android:layout_above="@+id/time_game"
        android:layout_toEndOf="@+id/title"
        android:layout_marginBottom="35dp" />

    <!--game information-->

</RelativeLayout>